Use boost program options in demo streaming app

--- a/Linux_x86/Cpp/Streaming_demo/makefile
+++ b/Linux_x86/Cpp/Streaming_demo/makefile
@@ -1,6 +1,6 @@
 CC			= g++
 
-LIBS		= -lArduCamLib -lusb-1.0  -lpthread -larducam_config_parser `pkg-config --cflags --libs opencv`
+LIBS		= -lArduCamLib -lusb-1.0  -lpthread -larducam_config_parser -lboost_program_options `pkg-config --cflags --libs opencv`
 FLAGS		= -L. -I. -std=gnu++11 -g
 LDIR		= ./Arducam_SDK
 
